--- a/package.json
+++ b/package.json
@@ -1258,6 +1258,10 @@
         {
           "command": "r.helpPanel.openForSelection",
           "when": "resourceLangId == rmd"
+        },
+        {
+          "command": "r.action.slice-cursor",
+          "when": "resourceLangId == r"
         }
       ],
       "view/item/context": [
