--- a/package.json
+++ b/package.json
@@ -1479,7 +1479,7 @@
           "default": [],
           "markdownDescription": "Additional library paths to launch R background processes (R languageserver, help server, etc.). These paths will be appended to `.libPaths()` on process startup. It could be useful for projects with [renv](https://rstudio.github.io/renv/index.html) enabled."
         },
-        "r.useRenvLibPath" : {
+        "r.useRenvLibPath": {
           "type": "boolean",
           "default": false,
           "markdownDescription": "Use renv library paths to launch R background processes (R languageserver, help server, etc.)."
@@ -2162,6 +2162,7 @@
     "webpack-cli": "^4.7.2"
   },
   "dependencies": {
+    "@eagleoutice/flowr": "^1.3.12",
     "ag-grid-community": "^30.2.0",
     "cheerio": "1.0.0-rc.10",
     "crypto": "^1.0.1",
